# clickup_leave_marker

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/: app.py
app/routes/: timeentry.py
scripts/: push.sh
