[build-system]
requires = ["setuptools >= 75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clickup_leave_marker"
version = "0.2.0"
dependencies = [
    "requests==2.32.3",
    "pytz==2024.1",
    "pydantic==2.10.6"
]
requires-python = ">= 3.12"
authors = [
    {name = "Abdullah Ajmal", email = "abdullah.ajmal.7@hotmail.com"},
    {name = "Abdullah Ajmal", email = "abdullah.ajmal@carteblanche.tech"},
]
maintainers = [
    {name = "Abdullah Ajmal", email = "abdullah.ajmal.7@hotmail.com"},
    {name = "Abdullah Ajmal", email = "abdullah.ajmal@carteblanche.tech"},
]
description = """This project aims to streamline a very specific usecase related to Clickup. Please refer to the readme
for this scenario."""
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "AWS", "AWS Lambda", "AWS API Gateway", "ClickUp", "ClickUp Automations", "Docker",
    "ClickUp API", "Python", "boto3", "Serverless"
]
